--- a/QuizPage.html
+++ b/QuizPage.html
@@ -9,7 +9,7 @@
     <body class="container-fluid">
         <div class="row">
             <div class="col-md-1 col-md-offset-10">
-                <button type="button" class="btn" id="quit-button">Quit</button>
+                <button type="button" class="btn" id="cheat-button">Cheat Sheet</button>
             </div>
         </div>
         <div class="row">
