--- a/ReferenceTable.html
+++ b/ReferenceTable.html
@@ -8,6 +8,11 @@
 <body class="container-fuid">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
+            <p id="header">Cheat Sheet</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
             <table id="sorting-table" class="table-bordered">
                 <tr>
                     <th>Algorithm</th>
