--- a/ReferenceTable.html
+++ b/ReferenceTable.html
@@ -7,12 +7,12 @@
 
 <body class="container-fuid">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
             <p id="header">Cheat Sheet</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
             <table id="sorting-table" class="table-bordered">
                 <tr>
                     <th>Algorithm</th>
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
             <table id="data-structures-table" class="table-bordered">
                 <tr>
                     <th>Data Structure</th>
