--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body class="container-fluid">
         <div class="row">
-            <div class="col-md-1 col-md-offset-10">
+            <div class="col-md-1 col-md-offset-10 col-sm-5 col-sm-offset-6">
                 <button type="button" class="btn" id="cheat-button">Cheat Sheet</button>
             </div>
         </div>
