--- a/ReferenceTable.html
+++ b/ReferenceTable.html
@@ -24,35 +24,35 @@
                 <tr>
                     <td class="blue-col">Quicksort</td>
                     <td class="green-col">n log(n)</td>
-                    <td class="yellow-col">n log(n)</td>
+                    <td>n log(n)</td>
                     <td class="red-col">n^2</td>
                     <td class="red-col">log(n)</td>
                 </tr>
                 <tr>
                     <td class="blue-col">Mergesort</td>
                     <td class="green-col">n log(n)</td>
-                    <td class="yellow-col">n log(n)</td>
+                    <td>n log(n)</td>
                     <td class="red-col">n log(n)</td>
                     <td class="red-col">n</td>
                 </tr>
                 <tr>
                     <td class="blue-col">Bubble Sort</td>
                     <td class="green-col">n</td>
-                    <td class="yellow-col">n^2</td>
+                    <td>n^2</td>
                     <td class="red-col">n^2</td>
                     <td class="red-col">1</td>
                 </tr>
                 <tr>
                     <td class="blue-col">Insertion Sort</td>
                     <td class="green-col">n</td>
-                    <td class="yellow-col">n^2</td>
+                    <td>n^2</td>
                     <td class="red-col">n^2</td>
                     <td class="red-col">1</td>
                 </tr>
                 <tr>
                     <td class="blue-col">Selection Sort</td>
                     <td class="green-col">n^2</td>
-                    <td class="yellow-col">n^2</td>
+                    <td>n^2</td>
                     <td class="red-col">n^2</td>
                     <td class="red-col">1</td>
                 </tr>
